# lectures

./: pyproject.toml
cap408-computing-applied-to-atmospheric-sciences/: 01_Preprocessing.ipynb  02_LSTM.ipynb  03_UNet.ipynb
