[project]
name = "lectures"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "cartopy>=0.24.1",
    "dask>=2024.9.1",
    "jupyter>=1.1.1",
    "matplotlib>=3.9.2",
    "netcdf4>=1.7.1.post2",
    "pandas>=2.2.3",
    "pydot>=3.0.2",
    "scikit-learn>=1.5.2",
    "seaborn>=0.13.2",
    "tensorflow>=2.17.0",
    "xarray>=2024.9.0",
]
